--- a/BlazorDOS/BlazorDOS.csproj
+++ b/BlazorDOS/BlazorDOS.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+    <PackageReference Include="Twilio" Version="5.52.1" />
   </ItemGroup>
 
 </Project>
